k8s-manifests/user-service/deployment-blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service-blue
  labels:
    app: user-service
    environment: blue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-service
      environment: blue
  template:
    metadata:
      labels:
        app: user-service
        environment: blue
    spec:
      containers:
        - name: user-service
          image: navaneeth2003/user-service:latest
          ports:
            - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: user-service-blue
spec:
  selector:
    app: user-service
    environment: blue
  ports:
    - port: 80
      targetPort: 8082
