k8s-manifests/user-service/deployment-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service-green
  labels:
    app: user-service
    environment: green
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-service
      environment: green
  template:
    metadata:
      labels:
        app: user-service
        environment: green
    spec:
      containers:
        - name: user-service
          image: navaneeth2003/user-service:latest
          ports:
            - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: user-service-green
spec:
  selector:
    app: user-service
    environment: green
  ports:
    - port: 80
      targetPort: 8082
